.provarCaches/00D5f000005vwGkEAI/objects/rstk__confdsel__c.object
<CustomObject>
    <description>confdsel__c</description>
    <fields>
        <fullName>rstk__confdsel_confgroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Group</label>
        <referenceTo>rstk__confgroup__c</referenceTo>
        <relationshipLabel>Configuration Session Selections</relationshipLabel>
        <relationshipName>confdsels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confdsel_confsel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Group Selection</label>
        <referenceTo>rstk__confsel__c</referenceTo>
        <relationshipLabel>Configuration Session Selections</relationshipLabel>
        <relationshipName>confdsels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confdsel_confsess__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Session ID</label>
        <referenceTo>rstk__confsess__c</referenceTo>
        <relationshipLabel>Configuration Session Selections</relationshipLabel>
        <relationshipName>confdsels</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__confdsel_cost__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Selection Cost</label>
        <summarizedField>rstk__confdcomp__c.rstk__confdcomp_extcost__c</summarizedField>
        <summaryForeignKey>rstk__confdcomp__c.rstk__confdcomp_confdsel__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__confdsel_locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selection Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__confdsel_price1__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Selection Alt Price 1</label>
        <summarizedField>rstk__confdcomp__c.rstk__confdcomp_extaltprice__c</summarizedField>
        <summaryForeignKey>rstk__confdcomp__c.rstk__confdcomp_confdsel__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__confdsel_price1cc__c</fullName>
        <formula>IF( rstk__confdsel_confsess__r.rstk__confsess_custcurrency__c, rstk__confdsel_price1__c ,  IF( ISNULL(rstk__confdsel_confsess__r.rstk__confsess_currexchrate__c) || rstk__confdsel_confsess__r.rstk__confsess_currexchrate__c = 0 , rstk__confdsel_price1__c , rstk__confdsel_price1__c * rstk__confdsel_confsess__r.rstk__confsess_currexchrate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Selection Alt Price 1 - Customer Currenc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confdsel_price1hc__c</fullName>
        <formula>IF( rstk__confdsel_confsess__r.rstk__confsess_custcurrency__c,  IF( ISNULL(rstk__confdsel_confsess__r.rstk__confsess_currexchrate__c) || rstk__confdsel_confsess__r.rstk__confsess_currexchrate__c = 0 , rstk__confdsel_price1__c, rstk__confdsel_price1__c/ rstk__confdsel_confsess__r.rstk__confsess_currexchrate__c), rstk__confdsel_price1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Alternate Price 1 – Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confdsel_price2__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Selection Alt Price 2</label>
        <summarizedField>rstk__confdcomp__c.rstk__confdcomp_extaltprice2__c</summarizedField>
        <summaryForeignKey>rstk__confdcomp__c.rstk__confdcomp_confdsel__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__confdsel_price2cc__c</fullName>
        <formula>IF( rstk__confdsel_confsess__r.rstk__confsess_custcurrency__c, rstk__confdsel_price2__c ,  IF( ISNULL(rstk__confdsel_confsess__r.rstk__confsess_currexchrate__c) || rstk__confdsel_confsess__r.rstk__confsess_currexchrate__c = 0 , rstk__confdsel_price2__c , rstk__confdsel_price2__c * rstk__confdsel_confsess__r.rstk__confsess_currexchrate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Selection Alt Price 2 - Customer Currenc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confdsel_price2hc__c</fullName>
        <formula>IF( rstk__confdsel_confsess__r.rstk__confsess_custcurrency__c,  IF( ISNULL(rstk__confdsel_confsess__r.rstk__confsess_currexchrate__c) || rstk__confdsel_confsess__r.rstk__confsess_currexchrate__c = 0 , rstk__confdsel_price2__c, rstk__confdsel_price2__c/ rstk__confdsel_confsess__r.rstk__confsess_currexchrate__c), rstk__confdsel_price2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Alternate Price 2 – Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confdsel_price__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Selection Price</label>
        <summarizedField>rstk__confdcomp__c.rstk__confdcomp_extprice__c</summarizedField>
        <summaryForeignKey>rstk__confdcomp__c.rstk__confdcomp_confdsel__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__confdsel_pricecc__c</fullName>
        <formula>IF( rstk__confdsel_confsess__r.rstk__confsess_custcurrency__c, rstk__confdsel_price__c,  IF( ISNULL(rstk__confdsel_confsess__r.rstk__confsess_currexchrate__c) || rstk__confdsel_confsess__r.rstk__confsess_currexchrate__c = 0 , rstk__confdsel_price__c , rstk__confdsel_price__c * rstk__confdsel_confsess__r.rstk__confsess_currexchrate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Selection Price - Customer Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confdsel_pricehc__c</fullName>
        <formula>IF( rstk__confdsel_confsess__r.rstk__confsess_custcurrency__c,  IF( ISNULL(rstk__confdsel_confsess__r.rstk__confsess_currexchrate__c) || rstk__confdsel_confsess__r.rstk__confsess_currexchrate__c = 0 , rstk__confdsel_price__c , rstk__confdsel_price__c / rstk__confdsel_confsess__r.rstk__confsess_currexchrate__c), rstk__confdsel_price__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Price – Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confdsel_qty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Input Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confdsel_totdepcompprice__c</fullName>
        <label>Total Price of Dependent Components</label>
        <summarizedField>rstk__confdcomp__c.rstk__confdcomp_extprice__c</summarizedField>
        <summaryFilterItems>
            <field>rstk__confdcomp__c.rstk__confdcomp_ownsoline__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>rstk__confdcomp__c.rstk__confdcomp_priceadjuster__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>rstk__confdcomp__c.rstk__confdcomp_confdsel__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>TEXT(rstk__confdsel_confsess__r.rstk__confsess_sessionid__c) + &apos;_&apos; + rstk__confdsel_confsel__r.rstk__externalid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>TEXT(rstk__confdsel_confsess__r.rstk__confsess_sessionid__c) + &apos; &apos; + rstk__confdsel_confsel__r.rstk__confsel_title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Configuration Session Selections</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Session Selections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>